# phonebook

./: README.md  db.sqlite3  pyproject.toml
mainapp/: admin.py  models.py  urls.py  views.py
mainapp/migrations/: 0001_initial.py
phonebook/: settings.py  urls.py
templates/mainapp/: base.html
